@@ -1,3 +1,14 @@
+2015-06-07  Dan Bernstein  <mitz@apple.com>
+
+        Unifiy the definition of UNREACHABLE_FOR_PLATFORM
+        https://bugs.webkit.org/show_bug.cgi?id=145737
+
+        Reviewed by Anders Carlsson.
+
+        * wtf/Assertions.h:
+        (UNREACHABLE_FOR_PLATFORM): Use the macro for clang as well. Its expansion includes
+        __attribute((__noreturn__)) so the pragmas are unnecessary.
+
 2015-06-05  Chris Dumez  <cdumez@apple.com>
 
         [WK2][iOS] Limit the number of vnodes used by the WebContent processes
